# primal

./: .gitignore  .jenkinsFile  CMakeLists.txt  README.md  primal_core_tutorial.ipynb  requirements.txt  setup.py
PrimalCore/: CMakeLists.txt
PrimalCore/auxdir/PrimalCore/: test_table.fits  test_table_photometry.fits
PrimalCore/doc/: API_full.rst  doc_module.rst
PrimalCore/doc/heterogeneous_table/: API_table.rst  API_table_handler.rst  doc_module.rst  table_user_guide.ipynb  table_user_guide.rst
PrimalCore/doc/homogeneous_table/: API_dataset.rst  API_dataset_handler.rst  doc_module.rst  mldataset_userguide.ipynb  mldataset_userguide.rst
PrimalCore/doc/io/: API_fits.rst  doc_module.rst
PrimalCore/doc/model_selection/: doc_module.rst
PrimalCore/doc/models/: API_base.rst  API_classification.rst  API_pipeline.rst  API_regression.rst  doc_module.rst
PrimalCore/doc/pdf/: doc_module.rst
PrimalCore/doc/preprocessing/: API_dataset_preprocessing.rst  API_features_selection.rst  doc_module.rst
PrimalCore/doc/pyreverse/: cl.txt
PrimalCore/doc/quick_start/: nb.tpl  primal_core_tutorial.ipynb  primal_core_tutorial.rst  test_prediction.fits  train_prediction.fits
PrimalCore/python/PrimalCore/: __init__.py
PrimalCore/tests/python/: ThatFunctionTest.py  photometryTest.py
PrimalInteractive/: CMakeLists.txt
PrimalInteractive/scripts/: compare_models_pipeline  visualize
PrimalPipeline/: CMakeLists.txt
PrimalPipeline/doc/: doc_module.rst
cmake/doc/: Sphinx_conf.py.in  index.rst.in
doc/: doc_project.rst  index.rst
doc/overview/: overview.rst
(+39 files in other folders)
